[project]
name = "telecloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "colorama>=0.4.6",
    "cryptg>=0.5.1",
    "dotenv>=0.9.9",
    "hachoir>=3.3.0",
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "telethon>=1.41.2",
]
